docs/tests/parser/structs/invalid/GenericStructMissingIdent.b
struct Box<> {
    let int x;
}
